--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     /* “Cards” genéricos: pega muita coisa baseada em fundo branco */
     html.dark .card,
     html.dark [data-card],
-    html.dark .bg-white {
+    html.dark .app-main .bg-white {
       background: #161616 !important;
       color: #f3f4f6 !important;
       border-color: #2a2a2a !important;
@@ -126,6 +126,44 @@
 
     html.dark .hover\:bg-gray-50:hover {
       background: #1f2937 !important;
+    }
+
+    :root {
+      --chart-real: #171717;
+      /* linha "Real" no modo claro */
+    }
+
+    html.dark {
+      --chart-real: #ffffff;
+      /* linha "Real" no modo escuro */
+    }
+
+    /* ===== CRM – Cabeçalho da tabela (modo escuro) ===== */
+    /* ===== CRM – Cabeçalho da tabela ===== */
+
+    /* modo claro (reset explícito) */
+    thead {
+      background-color: #f9fafb;
+      /* equivalente do bg-gray-50 */
+    }
+
+    thead th {
+      background-color: #f9fafb;
+      color: #6b7280;
+      /* equivalente do text-gray-500 */
+      border-bottom: 1px solid #e5e7eb;
+      /* gray-200 */
+    }
+
+    /* modo escuro */
+    html.dark thead {
+      background-color: #1a1a1a;
+    }
+
+    html.dark thead th {
+      background-color: #1a1a1a;
+      color: #e5e7eb;
+      border-bottom: 1px solid #2a2a2a;
     }
   </style>
   <script type="importmap">
